--- a/test/fixture/client/index.scss
+++ b/test/fixture/client/index.scss
@@ -1,3 +1,5 @@
+@import "theme.scss";
+
 ul {
   color: #fff;
 
@@ -8,7 +10,7 @@ ul {
       color: #ffd;
 
       &:hover {
-        color: #ffc;
+        color: $text-color;
       }
     }
   }
