--- a/example/avatar/client/scenes/component/Euler/index.scss
+++ b/example/avatar/client/scenes/component/Euler/index.scss
@@ -1,6 +1,11 @@
 .epii {
+  font-family: 'Times New Roman', Times, serif;
   margin: 1rem;
   padding: 1rem;
   background: #fff;
   color: #000;
+
+  p {
+    margin: 1rem 0 0;
+  }
 }
