--- a/test/fixture/client/theme.scss
+++ b/test/fixture/client/theme.scss
@@ -1,1 +1,9 @@
 $text-color: #333;
+
+.test-asset1 {
+  background: url(https://epii.io/test.png);
+}
+
+.test-asset2 {
+  background: url(test.png);
+}
